--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@prisma/client": "^5.12.0",
     "next": "14.1.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "winston": "^3.13.0"
   },
   "devDependencies": {
     "@types/node": "^20",
