--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
+    "react-toastify": "^10.0.5",
     "tailwind-merge": "^2.2.2",
     "winston": "^3.13.0"
   },
