--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-dom": "^18",
     "react-toastify": "^10.0.5",
     "tailwind-merge": "^2.2.2",
-    "winston": "^3.13.0"
+    "winston": "^3.13.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
