--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "date-fns": "^3.6.0",
+    "emoji-regex": "^10.3.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.366.0",
     "next": "14.0.4",
     "next-auth": "^5.0.0-beta.4",
@@ -56,6 +58,8 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
+    "@types/collections": "^5.1.5",
+    "@types/lodash": "^4.17.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
