--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "next-auth": "^5.0.0-beta.4",
     "next-themes": "^0.2.1",
     "react": "^18",
+    "react-calendar-heatmap": "^1.9.0",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18",
     "react-hook-form": "^7.49.2",
