--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-spinners": "^0.13.8",
     "recharts": "^2.12.4",
     "resend": "^2.1.0",
+    "sass": "^1.75.0",
     "sonner": "^1.3.1",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
