--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "next": "14.0.4",
     "next-auth": "^5.0.0-beta.4",
     "next-themes": "^0.2.1",
+    "randomcolor": "^0.6.2",
     "react": "^18",
     "react-calendar-heatmap": "^1.9.0",
     "react-day-picker": "^8.10.0",
@@ -62,6 +63,7 @@
     "@types/collections": "^5.1.5",
     "@types/lodash": "^4.17.0",
     "@types/node": "^20",
+    "@types/randomcolor": "^0.5.9",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/uuid": "^9.0.7",
