--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "randomcolor": "^0.6.2",
     "react": "^18",
     "react-calendar-heatmap": "^1.9.0",
+    "react-d3-cloud": "^1.0.6",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18",
     "react-hook-form": "^7.49.2",
