--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "next": "14.0.4",
     "next-auth": "^5.0.0-beta.4",
     "next-themes": "^0.2.1",
+    "nextjs-toploader": "^1.6.12",
     "randomcolor": "^0.6.2",
     "react": "^18",
     "react-calendar-heatmap": "^1.9.0",
