--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,6 @@
 {
   "extends": ["next", "prettier"],
   "rules": {
-    "react/no-unescaped-entities": "off",
+    "react/no-unescaped-entities": "off"
   }
 }
